--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Group-9-project.github.io",
+  "homepage": "https://paperTigerToo.github.io/Group-9-project",
   "name": "group9",
   "version": "0.1.0",
   "private": true,
